# bazel-error-prone

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  ext.bzl
java/: BUILD.bazel
java/allowed/: BUILD.bazel
java/allowed/src/: Lib.java  MyInterface.java
java/src/: Lib.java
refactor/: BUILD.bazel  run_ep.bzl
